--- a/monitors/index.html
+++ b/monitors/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#3B82F6" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#1E293B" media="(prefers-color-scheme: dark)">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="StackPick">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="Best gaming monitors for UK gamers 2026. Researched 180Hz, 240Hz, Mini-LED and 4K OLED options. UK pricing verified on Amazon.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://stackpick.co.uk/monitors/">
@@ -11,6 +17,10 @@
     <meta property="og:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Best Gaming Monitors UK 2026 | Stack Pick</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🖥️</text></svg>">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" as="style">
+    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -300,8 +310,6 @@
         </ul>
     </nav>
 
-    <script src="/assets/js/theme-toggle.js"></script>
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/nav.js"></script>
+    <script src="/assets/js/app.js" defer></script>
 </body>
 </html>
