--- a/guides/gaming-setup-1000/index.html
+++ b/guides/gaming-setup-1000/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#3B82F6" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#1E293B" media="(prefers-color-scheme: dark)">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="StackPick">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="Complete £1000 gaming setup for UK gamers 2026. Best headset, keyboard, mouse, monitor, and chair under £1000 with UK pricing on Amazon.">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://stackpick.co.uk/guides/gaming-setup-1000/">
@@ -15,27 +21,33 @@
     <meta property="twitter:description" content="Complete £1000 gaming setup for UK gamers. Enthusiast-level gear with real UK pricing.">
     <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>£1000 Gaming Setup UK 2026 | Stack Pick</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
-    <script src="/assets/js/analytics.js"></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Article","headline":"£1000 Gaming Setup UK 2026","description":"Complete £1000 gaming peripheral setup for UK gamers with verified Amazon UK pricing.","url":"https://stackpick.co.uk/guides/gaming-setup-1000/","author":{"@type":"Organization","name":"Stack Pick","url":"https://stackpick.co.uk"},"publisher":{"@type":"Organization","name":"Stack Pick","url":"https://stackpick.co.uk"},"datePublished":"2026-02-17","dateModified":"2026-02-17"}
     </script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://stackpick.co.uk/"},{"@type":"ListItem","position":2,"name":"Guides","item":"https://stackpick.co.uk/guides/"},{"@type":"ListItem","position":3,"name":"£1000 Gaming Setup","item":"https://stackpick.co.uk/guides/gaming-setup-1000/"}]}
     </script>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" as="style">
+    <link rel="preload" href="/assets/css/style.css" as="style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
+    <script src="/assets/js/analytics.js"></script>
 </head>
 <body>
+
     <a href="#main-content" class="skip-link">Skip to main content</a>
+
+    <!-- HEADER -->
     <header>
         <div class="header-container">
             <a href="/" class="logo">Stack<span>Pick</span></a>
-            <button class="menu-toggle" id="menu-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
-            <nav>
+            <nav aria-label="Main navigation">
                 <a href="/headsets/">Headsets</a>
                 <a href="/keyboards/">Keyboards</a>
                 <a href="/mice/">Mice</a>
@@ -47,14 +59,50 @@
         </div>
     </header>
 
-    <section class="hero">
+    <!-- DESKTOP SIDEBAR -->
+    <aside class="desktop-sidebar" aria-label="Site navigation">
+        <div class="sidebar-section">
+            <p class="sidebar-heading">Stacks</p>
+            <a href="/#stacks" class="sidebar-link"><span class="nav-icon">⚡</span> All Stacks</a>
+        </div>
+        <div class="sidebar-section">
+            <p class="sidebar-heading">Peripherals</p>
+            <a href="/headsets/" class="sidebar-link"><span class="nav-icon">🎧</span> Headsets</a>
+            <a href="/keyboards/" class="sidebar-link"><span class="nav-icon">⌨️</span> Keyboards</a>
+            <a href="/mice/" class="sidebar-link"><span class="nav-icon">🖱️</span> Mice</a>
+            <a href="/monitors/" class="sidebar-link"><span class="nav-icon">🖥️</span> Monitors</a>
+            <a href="/chairs/" class="sidebar-link"><span class="nav-icon">🪑</span> Chairs</a>
+        </div>
+        <div class="sidebar-section">
+            <p class="sidebar-heading">Coming Soon</p>
+            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">💻</span> PCs <span class="sidebar-badge">Soon</span></span>
+            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">🪵</span> Desks <span class="sidebar-badge">Soon</span></span>
+            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">🔊</span> Speakers <span class="sidebar-badge">Soon</span></span>
+            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">✨</span> Extras <span class="sidebar-badge">Soon</span></span>
+        </div>
+        <div class="sidebar-divider"></div>
+        <div class="sidebar-section">
+            <a href="/guides/" class="sidebar-link"><span class="nav-icon">📋</span> Setup Guides</a>
+            <a href="/comparisons/" class="sidebar-link"><span class="nav-icon">⚖️</span> Comparisons</a>
+            <a href="/about/" class="sidebar-link"><span class="nav-icon">ℹ️</span> About</a>
+        </div>
+        <button class="sidebar-theme-btn" id="theme-toggle-sidebar" aria-label="Toggle theme">
+            <span id="sidebar-theme-icon">🌙</span>
+            <span id="sidebar-theme-label">Dark mode</span>
+        </button>
+    </aside>
+
+    <!-- PAGE WRAPPER -->
+    <div class="page-wrapper">
+
+        <section class="hero">
         <div class="hero-container">
             <h1>£1000 Gaming Setup UK</h1>
             <p>Enthusiast peripherals that make every session count. Updated February 2026.</p>
         </div>
     </section>
 
-    <div class="breadcrumb-bar">
+        <div class="breadcrumb-bar">
         <div class="container" style="padding-top:0.75rem;padding-bottom:0.75rem;">
             <ol class="breadcrumb-list" aria-label="Breadcrumb">
                 <li><a href="/">Home</a></li>
@@ -66,7 +114,7 @@
         </div>
     </div>
 
-    <main class="container" id="main-content">
+        <main class="container" id="main-content">
 
         <!-- BUDGET SUMMARY TABLE -->
         <section class="section">
@@ -252,40 +300,94 @@
 
     </main>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <a href="/" class="logo footer-logo">Stack<span>Pick</span></a>
-                    <p class="footer-tagline">Researched gaming gear for UK gamers. Real prices. No BS.</p>
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer-container">
+                <div class="footer-grid">
+                    <div class="footer-col">
+                        <a href="/" class="logo footer-logo">Stack<span>Pick</span></a>
+                        <p class="footer-tagline">Researched gaming gear for UK gamers. Real prices. No BS.</p>
+                    </div>
+                    <div class="footer-col">
+                        <h4 class="footer-heading">Categories</h4>
+                        <ul class="footer-links">
+                            <li><a href="/headsets/">Headsets</a></li>
+                            <li><a href="/keyboards/">Keyboards</a></li>
+                            <li><a href="/mice/">Mice</a></li>
+                            <li><a href="/monitors/">Monitors</a></li>
+                            <li><a href="/chairs/">Chairs</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-col">
+                        <h4 class="footer-heading">Resources</h4>
+                        <ul class="footer-links">
+                            <li><a href="/guides/">Setup Guides</a></li>
+                            <li><a href="/comparisons/">Comparisons</a></li>
+                            <li><a href="/about/">About</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer-col">
-                    <h4 class="footer-heading">Categories</h4>
-                    <ul class="footer-links">
-                        <li><a href="/headsets/">Headsets</a></li>
-                        <li><a href="/keyboards/">Keyboards</a></li>
-                        <li><a href="/mice/">Mice</a></li>
-                        <li><a href="/monitors/">Monitors</a></li>
-                        <li><a href="/chairs/">Chairs</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4 class="footer-heading">Resources</h4>
-                    <ul class="footer-links">
-                        <li><a href="/guides/">Setup Guides</a></li>
-                        <li><a href="/comparisons/">Comparisons</a></li>
-                        <li><a href="/about/">About</a></li>
-                    </ul>
+                <div class="footer-bottom">
+                    <p>&copy; 2026 Stack Pick. Built for UK gamers.</p>
+                    <p style="font-size:0.8rem;margin-top:0.5rem;">As an Amazon Associate, we earn from qualifying purchases. <a href="/about/">Learn more</a></p>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 Stack Pick. Built for UK gamers.</p>
-                <p style="font-size:0.8rem;margin-top:0.5rem;">As an Amazon Associate, we earn from qualifying purchases. <a href="/about/">Learn more</a></p>
-            </div>
-        </div>
-    </footer>
+        </footer>
 
-    <script src="/assets/js/theme-toggle.js"></script>
-    <script src="/assets/js/main.js"></script>
+    </div><!-- end .page-wrapper -->
+
+    <!-- MORE PANEL OVERLAY -->
+    <div class="more-panel-overlay" id="more-overlay"></div>
+    <div class="bottom-nav-more-panel" id="more-panel">
+        <p class="more-panel-title">All categories</p>
+        <div class="more-panel-grid">
+            <a href="/monitors/" class="more-panel-link"><span class="nav-icon">🖥️</span>Monitors</a>
+            <a href="/chairs/" class="more-panel-link"><span class="nav-icon">🪑</span>Chairs</a>
+            <a href="/guides/" class="more-panel-link"><span class="nav-icon">📋</span>Guides</a>
+            <a href="/comparisons/" class="more-panel-link"><span class="nav-icon">⚖️</span>Compare</a>
+            <a href="/about/" class="more-panel-link"><span class="nav-icon">ℹ️</span>About</a>
+            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">💻</span>PCs</div>
+            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">🪵</span>Desks</div>
+            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">✨</span>Extras</div>
+        </div>
+    </div>
+
+    <!-- BOTTOM NAV -->
+    <nav class="bottom-nav" aria-label="Mobile navigation">
+        <ul class="bottom-nav-items">
+            <li class="bottom-nav-item">
+                <a href="/" class="bottom-nav-link" aria-label="Home">
+                    <span class="nav-icon">🏠</span>
+                    <span class="nav-label">Home</span>
+                </a>
+            </li>
+            <li class="bottom-nav-item">
+                <a href="/headsets/" class="bottom-nav-link" aria-label="Headsets">
+                    <span class="nav-icon">🎧</span>
+                    <span class="nav-label">Headsets</span>
+                </a>
+            </li>
+            <li class="bottom-nav-item">
+                <a href="/keyboards/" class="bottom-nav-link" aria-label="Keyboards">
+                    <span class="nav-icon">⌨️</span>
+                    <span class="nav-label">Keyboards</span>
+                </a>
+            </li>
+            <li class="bottom-nav-item">
+                <a href="/mice/" class="bottom-nav-link" aria-label="Mice">
+                    <span class="nav-icon">🖱️</span>
+                    <span class="nav-label">Mice</span>
+                </a>
+            </li>
+            <li class="bottom-nav-item">
+                <button class="bottom-nav-link" id="more-btn" aria-label="More" aria-expanded="false">
+                    <span class="nav-icon">⊞</span>
+                    <span class="nav-label">More</span>
+                </button>
+            </li>
+        </ul>
+    </nav>
+
+    <script src="/assets/js/app.js" defer></script>
 </body>
 </html>
