--- a/guides/index.html
+++ b/guides/index.html
@@ -21,13 +21,14 @@
     <meta property="twitter:description" content="Complete gaming setup guides by budget. Build your perfect setup with UK pricing and availability.">
     <meta property="twitter:image" content="https://stackpick.co.uk/assets/images/og-image.jpg">
     <title>Gaming Setup Guides UK | Stack Pick</title>
+    <link rel="canonical" href="https://stackpick.co.uk/guides/">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📋</text></svg>">
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/assets/icons/icon-192.png">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" as="style">
-    <link rel="preload" href="/assets/css/style.css" as="style">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="/assets/css/style.css" as="style">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTN7H3L6DV"></script>
@@ -69,15 +70,16 @@
         </div>
         <div class="sidebar-section">
             <p class="sidebar-heading">Coming Soon</p>
-            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">💻</span> PCs <span class="sidebar-badge">Soon</span></span>
-            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">🪵</span> Desks <span class="sidebar-badge">Soon</span></span>
-            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">🔊</span> Speakers <span class="sidebar-badge">Soon</span></span>
-            <span class="sidebar-link sidebar-link-disabled"><span class="nav-icon">✨</span> Extras <span class="sidebar-badge">Soon</span></span>
+            <a href="/pcs/" class="sidebar-link"><span class="nav-icon">💻</span> PCs <span class="sidebar-badge">Soon</span></a>
+            <a href="/desks/" class="sidebar-link"><span class="nav-icon">🪵</span> Desks <span class="sidebar-badge">Soon</span></a>
+            <a href="/speakers/" class="sidebar-link"><span class="nav-icon">🔊</span> Speakers <span class="sidebar-badge">Soon</span></a>
+            <a href="/extras/" class="sidebar-link"><span class="nav-icon">✨</span> Extras <span class="sidebar-badge">Soon</span></a>
         </div>
         <div class="sidebar-divider"></div>
         <div class="sidebar-section">
             <a href="/guides/" class="sidebar-link"><span class="nav-icon">📋</span> Setup Guides</a>
             <a href="/comparisons/" class="sidebar-link"><span class="nav-icon">⚖️</span> Comparisons</a>
+            <a href="/search/" class="sidebar-link"><span class="nav-icon">🔍</span> Search</a>
             <a href="/about/" class="sidebar-link"><span class="nav-icon">ℹ️</span> About</a>
         </div>
         <button class="sidebar-theme-btn" id="theme-toggle-sidebar" aria-label="Toggle theme">
@@ -146,6 +148,26 @@
                 <p>We cross-reference what UK gaming communities are actually buying and recommending months after purchase — not just spec sheets. Everything listed is available on Amazon UK with verified pricing. No US-only drops, no phantom availability, no sponsored picks.</p>
             </div>
         </section>
+        <section class="newsletter-section">
+            <h3 style="margin:0 0 0.5rem;">Stay Updated</h3>
+            <p style="color:#666;margin:0 0 1rem;">New picks and guides, straight to your inbox. No spam.</p>
+            <form onsubmit="handleNewsletterSignup(event)" style="display:flex;gap:0.5rem;justify-content:center;flex-wrap:wrap;">
+                <input type="email" placeholder="your@email.com" required style="padding:0.6rem 1rem;border:1px solid #ddd;border-radius:6px;font-size:1rem;min-width:220px;">
+                <button type="submit" style="padding:0.6rem 1.2rem;background:#2563eb;color:#fff;border:none;border-radius:6px;font-size:1rem;cursor:pointer;">Notify Me</button>
+            </form>
+        </section>
+        <script>
+        function handleNewsletterSignup(e) {
+            e.preventDefault();
+            var email = e.target.querySelector('input[type=email]').value;
+            if (typeof gtag === 'function') {
+                gtag('event', 'newsletter_signup', { email_domain: email.split('@')[1] });
+            }
+            e.target.innerHTML = '<p style="color:#16a34a;font-weight:600;">✓ You\'re on the list!</p>';
+            // TODO: swap commented line below for your Mailchimp/ConvertKit endpoint
+            // fetch('/api/subscribe', { method: 'POST', body: JSON.stringify({ email }) });
+        }
+        </script>
     </main>
 
         <!-- FOOTER -->
@@ -193,10 +215,10 @@
             <a href="/chairs/" class="more-panel-link"><span class="nav-icon">🪑</span>Chairs</a>
             <a href="/guides/" class="more-panel-link"><span class="nav-icon">📋</span>Guides</a>
             <a href="/comparisons/" class="more-panel-link"><span class="nav-icon">⚖️</span>Compare</a>
-            <a href="/about/" class="more-panel-link"><span class="nav-icon">ℹ️</span>About</a>
-            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">💻</span>PCs</div>
-            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">🪵</span>Desks</div>
-            <div class="more-panel-link more-panel-link-disabled"><span class="nav-icon">✨</span>Extras</div>
+            <a href="/about/" class="more-panel-link"><span class="nav-icon">ℹ️</span>About</a>             <a href="/search/" class="more-panel-link"><span class="nav-icon">🔍</span>Search</a>
+            <a href="/pcs/" class="more-panel-link"><span class="nav-icon">💻</span>PCs</a>
+            <a href="/desks/" class="more-panel-link"><span class="nav-icon">🪵</span>Desks</a>
+            <a href="/extras/" class="more-panel-link"><span class="nav-icon">✨</span>Extras</a>
         </div>
     </div>
 
@@ -237,5 +259,7 @@
     </nav>
 
     <script src="/assets/js/app.js" defer></script>
+    <script> document.querySelectorAll('.price-current').forEach(function(el) {     if (!el.querySelector('.price-badge')) {         var badge = document.createElement('span');         badge.className = 'price-badge';         badge.textContent = 'Checked Feb 2026';         el.appendChild(badge);     } }); 
+    </script> 
 </body>
 </html>
